<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.singh.Groz247.Checkout_Details">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        >

        <EditText
            android:id="@+id/fullnameinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/enterNameHint"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            />
        <EditText
            android:id="@+id/phoneinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="13"
            android:hint="@string/enterPhoneHint"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <EditText
            android:id="@+id/addressinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"


            android:gravity="center"
            android:inputType="textMultiLine"
            android:hint="@string/enterAddressHint"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />


        <EditText
            android:id="@+id/emailinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"

            android:gravity="center"
            android:inputType="textEmailAddress"
            android:hint="@string/mailEnterHint"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            />
        <EditText
            android:id="@+id/passwordinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/passwordEnterHint"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"


            />

        <Button
            android:id="@+id/PlaceOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/placeOrder2"
            android:textStyle="bold"
            android:background="@drawable/selector_transparent_button"
            />

</LinearLayout>







</RelativeLayout>
