<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.singh.Groz247.ChooseTimeSlot"
    android:orientation="vertical"
    android:background="#fffff2fe"
    android:alpha="1"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ChooseSlotTile"
        android:textSize="20sp"
        android:textColor="#000"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:background="@drawable/selectoritem2"
        android:id="@+id/chooseSlotTile" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="10dp">



        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/timeslotRadioGrp"
            android:orientation="vertical"
            android:gravity="center"
            android:checkedButton="1">


        <RadioButton
            android:id="@+id/timeSlotOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeSlot1"
            android:gravity="center"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/timeSlotTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeSlot2"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

        </RadioGroup>
        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/placeOrderTile"
            android:textColor="#000"
            android:textStyle="bold"
            android:id="@+id/placeOrder"
            android:background="@drawable/selector_transparent_button"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            />
</RelativeLayout>



</LinearLayout>
